

add_executable(SubdivisionTest SubdivisionTest.cxx)
target_link_libraries(SubdivisionTest ${VTK_LIBRARIES} LinearSubdivision2)




set(LOCAL_NAME LinearSubdivision)
set(LOCAL_LIBRARIES ${VTK_LIBRARIES} LinearSubdivision2)

SEMMacroBuildCLI(
  NAME ${LOCAL_NAME}
  #${STATIC}
  TARGET_LIBRARIES ${LOCAL_LIBRARIES}
  # RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
  # LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
  # ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}  
  # INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DESTINATION}
  # INSTALL_LIBRARY_DESTINATION ${INSTALL_LIBRARY_DESTINATION}
  # INSTALL_ARCHIVE_DESTINATION ${INSTALL_ARCHIVE_DESTINATION}
)
